--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,46 @@ verde #49a09d
 lilás: #5f2c82
 */
 
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: #5f2c82;
+    height: 100vh;
+    width: vw;
+ }
+
+ main {
+    height: 100vh;
+    width:100vw; 
+    position:relative; 
+}
+
+section#login {
+    position: absolute;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+section#login > div#imagem { 
+    background: #5f2c82 url(../Imagens/pexels-photo-2896034.jpg) no-repeat;
+    background-size: cover;
+    background-position: left bottom;
+    height: 200px;
+
+
+}
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
