--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,6 +34,8 @@ section#login {
     transform: translate(-50%, -50%);
     border-radius: 20px;
     overflow: hidden;
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem { 
