--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -9,6 +9,12 @@
         width: 90vw;
     }
 
+    section#login > div#imagem {
+        float: left;
+        width: 30%;
+        height: 100%;
+    }
+ 
     section#login > div#formulario {
         float: left;
         width: 70%;
@@ -27,14 +33,22 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    div#formulario > p {
+        font-size: 1.2em;
     }
     
 }
