--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -19,8 +19,40 @@
         float: left;
         width: 70%;
     }
+    
+    input#submit {
 
-   
+        display: block;
+        font-size: 1em;
+        width: 100%;
+        height: 40px;
+        background-color: #49a09d;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        
+    }
+    
+    input#submit:hover {
+        background-color: #2d6462;
+    }
+    
+    form > a.botao {
+        display: block;
+        text-align: center;
+        font-size: 1em;
+        width:100%;
+        height: 40px; 
+        padding-top: 5px;
+        margin-top: 5px;
+        background-color: white;
+        color: #2d6462;
+        border: 1px solid #49a09d;
+        border-radius:  7px;
+        text-decoration: none;
+    
+    }
+
 
     }
     @media screen and (min-width: 992px) {
@@ -51,4 +83,37 @@
         font-size: 1.2em;
     }
     
+    input#submit {
+
+        display: block;
+        font-size: 1em;
+        width: 100%;
+        height: 40px;
+        background-color: #49a09d;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        
+    }
+    
+    input#submit:hover {
+        background-color: #2d6462;
+    }
+    
+    form > a.botao {
+        display: block;
+        text-align: center;
+        font-size: 1em;
+        width:100%;
+        height: 40px; 
+        padding-top: 5px;
+        margin-top: 5px;
+        background-color: white;
+        color: #2d6462;
+        border: 1px solid #49a09d;
+        border-radius:  7px;
+        text-decoration: none;
+    
+    }
+
 }
