--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,7 +28,7 @@ section#login {
     position: absolute;
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -49,4 +49,60 @@ section#login > div#imagem {
 section#login > div#formulario {
     display: block;
     padding: 10px;
+}
+
+input#submit {
+
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    
+}
+
+input#submit:hover {
+    background-color: #2d6462;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width:100%;
+    height: 40px; 
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border: 1px solid #49a09d;
+    border-radius:  7px;
+    text-decoration: none;
+
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+div.campo > input  {
+    background-color: #94cfcd;
+    font-size: 1em;
+    height: 100%;
+    width: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 
+    4px;
 }
