--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,7 @@ section#login {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 20px;
-    overflow: hidden;
+    overflow: hidden; 
     transition: width .3s, height .3s;
     transition-timing-function: ease;
     box-shadow: 0px 0px 10px rgba(0, 0, 0.450);
@@ -59,6 +59,9 @@ div#formulario > h1 {
     margin-bottom: 10px;
 }
 
+div#formulario > p  { 
+        font-size: 1.2em;
+}
 input#submit {
 
     display: block;
@@ -69,6 +72,7 @@ input#submit {
     color: white;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
     
 }
 
@@ -95,22 +99,24 @@ a#botao {
 form > div.campo {
     background-color: #5f2c82;
     display: block;
-    width: 100%;
+    width: 100vw;
     height: 40px;
     border-radius: 5px;
     margin: 5px 0px;
 }
 
-div.campo > label {
-    display: none;
-}
+
 div.campo > input  {
-    background-color: #94cfcd;
+    background-color: #c2a7d5;
     font-size: 1em;
     height: 100%;
-    width: 100%;
+    width: 63vw;
     border: 0px;
     border-radius: 8px;
-    padding: 
-    4px;
+    padding: 4px;
+
 }
+form label {
+    display: none;
+}
+
